# AIMermorylayer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PRIVACY_MANIFESTO.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
frontend/apps/desktop/: package.json
frontend/apps/web/src/app/: globals.css  page.tsx
services/memory/: main.py  package.json
services/memory/api/: routes.py
services/memory/core/: faiss_store.py  lance_store.py  vector_store.py
shared/python/models/: events.py  memory.py  user.py
